# k3ng_rotator_controller

./: .gitignore  .gitmodules
k3ng_python/: pyproject.toml  set_tracking.py
k3ng_python/k3ng/: __init__.py
k3ng_python/k3ng_python/: k3ng.py
k3ng_rotator_controller/: rotator_features.h  rotator_k3ngdisplay.h  rotator_pins.h  rotator_settings.h
tle-script/: cal_rotator.py  go_home.py  ipython_start.py  k3ng.py  load_and_track.py  load_tle.ps1  load_tle.py  load_tle.sh  park_ant.py  pyproject.toml  sanity.py  set_park_location.py  set_permissions.sh  setup_arduino.py  setup_rotator.py  test_functionality.py  test_k3ng.py  toggle_tracking.py
