[tool.poetry]
name = "tle-script"
version = "0.1.0"
description = ""
authors = ["Cameron Rodriguez <rod.cam2014+dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyserial = "^3.5"
requests = "^2.31.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.3.0"
types-requests = "^2.31.0"
types-pyserial = "^3.5.0.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
